macOS: Fix keyEquivalents on PT keyboard layout.

The only layout that should use -[NSEvent characters] to match keyEquivalents
rather than -[NSEvent charactersIgnoringModifiers] is DVORAK-QWERTY. This CL
updates the logic in NSMenuItem(ChromeAdditions) to make this check.

Bug: 852820
Change-Id: Ib3f63bfadfd10ec5259324b2d7d52510997f7a98
Reviewed-on: https://chromium-review.googlesource.com/1103121
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568158}
Former-commit-id: 767446e00e56d703a9461ee5cae2a64d6c6281cb